--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --bg-image: url('/images/bgImage.jpg');
+  --bg-color: #f3f4f6;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,10 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('/bgImage.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: var(--bg-color) var(--bg-image) center/cover no-repeat;
 }
 
 code {
